password encoder laayer added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,6 @@ spring.datasource.testWhileIdle = true
 spring.datasource.timeBetweenEvictionRunsMillis = 60000
 spring.datasource.validationQuery = SELECT 1
 spring.jpa.hibernate.ddl-auto = update
-
+security.basic.enable: false
+security.ignored=/**
 
