--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,10 @@
             <artifactId>sass-maven-plugin</artifactId>
             <version>3.7.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 
 
       </dependencies>
